# mapclientplugins.imagesourcestep

./: LICENSE  README.rst  pyproject.toml  setup.py
docs/: conf.py  index.rst  specification.rst
mapclientplugins/imagesourcestep/: __init__.py  step.py
mapclientplugins/imagesourcestep/widgets/: configuredialog.py  resources_rc.py  ui_configuredialog.py
